# KrKr2-Next

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  DockerFile.linux  README.md  README_CN.md  README_EN.md  build-linux.sh  build.gradle  gradle.properties  krkr2_plugins.md  settings.gradle  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-android.yml  build-linux.yml  build-windows.yml  code-format-check.yml  upstream-sync.yml
android/app/: AndroidManifest.xml  build.gradle
android/libcocos2dx/: build.gradle
apple/macos/: platform.mm
apps/flutter_app/: pubspec.yaml
apps/flutter_app/lib/: main.dart
apps/flutter_app/test/: widget_test.dart
bridge/engine_api/: CMakeLists.txt
bridge/engine_api/include/: engine_api.h
bridge/engine_api/src/: engine_api.cpp
bridge/flutter_engine_bridge/lib/: flutter_engine_bridge.dart  flutter_engine_bridge_method_channel.dart  flutter_engine_bridge_platform_interface.dart
bridge/flutter_engine_bridge/test/: flutter_engine_bridge_method_channel_test.dart  flutter_engine_bridge_test.dart
cpp/: krkr2_android.cpp
cpp/core/: CMakeLists.txt
cpp/core/base/: 7zArchive.cpp  BinaryStream.cpp  BinaryStream.h  CMakeLists.txt  CharacterSet.cpp  CharacterSet.h  EventIntf.cpp  EventIntf.h  KAGParser.cpp  KAGParser.h  PluginIntf.cpp  ScriptMgnIntf.cpp  ScriptMgnIntf.h  StorageIntf.cpp  StorageIntf.h  SysInitIntf.cpp  SysInitIntf.h  SystemIntf.cpp  TARArchive.cpp  TextStream.cpp  TextStream.h  UtilStreams.cpp  UtilStreams.h  XP3Archive.cpp  XP3Archive.h  ZIPArchive.cpp  common.h  tar.h
cpp/core/common/: Defer.h
cpp/core/environ/: Application.cpp  Application.h  CMakeLists.txt  DetectCPU.cpp  DetectCPU.h  DumpSend.cpp  EngineBootstrap.cpp  EngineBootstrap.h  EngineLoop.cpp  EngineLoop.h  MainScene.cpp  MainScene.h  Platform.h  XP3ArchiveRepack.cpp  XP3ArchiveRepack.h  combase.h  typedefine.h
cpp/core/extension/: Extension.cpp  Extension.h
cpp/core/movie/: CMakeLists.txt
cpp/core/msg/: MsgIntf.cpp  MsgIntf.h  MsgIntfInc.h
cpp/core/plugin/: PluginImpl.cpp  ncbind.cpp  ncbind.hpp
cpp/core/sound/: CDDAIntf.cpp  CDDAIntf.h  CMakeLists.txt  FFWaveDecoder.cpp  MIDIIntf.cpp  MIDIIntf.h  MathAlgorithms.cpp  MathAlgorithms.h  PhaseVocoderDSP.cpp  PhaseVocoderDSP.h  PhaseVocoderFilter.cpp  PhaseVocoderFilter.h  RingBuffer.h  SoundBufferBaseIntf.cpp  SoundBufferBaseIntf.h  VorbisWaveDecoder.cpp  WaveFormatConverter.cpp  WaveFormatConverter_SSE.cpp  WaveIntf.cpp  WaveIntf.h  WaveLoopManager.cpp  WaveLoopManager.h  WaveSegmentQueue.cpp  WaveSegmentQueue.h  xmmlib.cpp  xmmlib.h
cpp/core/tjs2/: CMakeLists.txt  tjs.cpp  tjs.h  tjsArray.cpp  tjsArray.h  tjsBinarySerializer.cpp  tjsBinarySerializer.h  tjsByteCodeLoader.cpp  tjsByteCodeLoader.h  tjsCompileControl.cpp  tjsCompileControl.h  tjsConfig.cpp  tjsConfig.h  tjsConstArrayData.cpp  tjsConstArrayData.h  tjsDate.cpp  tjsDateParser.cpp  tjsDateParser.h  tjsDebug.cpp  tjsDebug.h  tjsDictionary.cpp  tjsDictionary.h  tjsDisassemble.cpp  tjsError.cpp  tjsError.h  tjsErrorDefs.h  tjsErrorInc.h  tjsError_jp.h  tjsException.cpp  tjsGlobalStringMap.cpp  tjsHashSearch.h  tjsInterCodeExec.cpp  tjsInterCodeExec.h  tjsInterCodeGen.cpp  tjsInterCodeGen.h  tjsInterface.h  tjsLex.cpp  tjsLex.h  tjsMT19937ar-cok.cpp  tjsMT19937ar-cok.h  (+29 more)
cpp/core/utils/: CMakeLists.txt  ClipboardIntf.cpp  ClipboardIntf.h  DebugIntf.cpp  Debugger.h  KAGParser.cpp  KAGParser.h  MathAlgorithms.h  MathAlgorithms_Default.cpp  (+14 more)
cpp/core/visual/: BitmapIntf.cpp  BitmapIntf.h  BitmapLayerTreeOwner.cpp  BitmapLayerTreeOwner.h  CMakeLists.txt  CharacterData.cpp  CharacterData.h  ComplexRect.cpp  ComplexRect.h  FontImpl.cpp  FontImpl.h  FontRasterizer.h  FontSystem.cpp  FontSystem.h  FreeType.cpp  FreeType.h  FreeTypeFace.h  FreeTypeFontRasterizer.cpp  FreeTypeFontRasterizer.h  GraphicsLoadThread.cpp  GraphicsLoadThread.h  GraphicsLoaderIntf.cpp  GraphicsLoaderIntf.h  ImageFunction.cpp  ImageFunction.h  LayerBitmapIntf.cpp  LayerBitmapIntf.h  LayerIntf.cpp  LayerIntf.h  LayerManager.cpp  LayerManager.h  LayerTreeOwner.h  LayerTreeOwnerImpl.cpp  LayerTreeOwnerImpl.h  LoadBPG.cpp  LoadJPEG.cpp  LoadJXR.cpp  LoadPNG.cpp  LoadPVRv3.cpp  LoadTLG.cpp  (+29 more)
cpp/core/visual/ARM/: AlphaMovie_mjpeg.h  tvpgl_arm.cpp
cpp/core/visual/gl/: ResampleImage.cpp  ResampleImage.h  ResampleImageInternal.h  WeightFunctor.h  aligned_allocator.h  blend_function.cpp  blend_functor_c.h  blend_util_func.h  blend_variation.h  tvpgl_mathutil.h
cpp/core/visual/impl/: DrawDevice.cpp  DrawDevice.h  VideoOvlImpl.cpp
cpp/core/visual/ogl/: RenderManager_ogl.cpp  RenderManager_ogl_test.hpp  astcrt.cpp  astcrt.h  etcpak.cpp  etcpak.h  imagepacker.cpp  imagepacker.h  krkr_egl_context.cpp  krkr_egl_context.h  krkr_gl.cpp  pvrtc.cpp  pvrtc.h
cpp/core/visual/win32/: BasicDrawDevice.cpp  BasicDrawDevice.h  BitmapBitsAlloc.cpp  BitmapInfomation.cpp  BitmapInfomation.h  DInputMgn.cpp  DInputMgn.h  DrawDevice.cpp  DrawDevice.h  GDIFontRasterizer.cpp  GDIFontRasterizer.h  GraphicsLoaderImpl.cpp  LayerBitmapImpl.cpp  LayerBitmapImpl.h  LayerImpl.cpp  LayerImpl.h  MenuItemImpl.cpp  MenuItemImpl.h  NativeFreeTypeFace.cpp  NativeFreeTypeFace.h  PassThroughDrawDevice.cpp  PassThroughDrawDevice.h  TVPScreen.cpp  TVPSysFont.cpp  TVPSysFont.h  VSyncTimingThread.cpp  VideoOvlImpl.cpp  VideoOvlImpl.h  WindowImpl.cpp  WindowImpl.h  krmovie.h
cpp/plugins/: CMakeLists.txt  InternalPlugins.cpp  LayerExBase.cpp  LayerExBase.h  PluginStub.h  addFont.cpp  alphamovie.cpp  csvParser.cpp  dirlist.cpp  extrans.cpp  fftgraph.cpp  getSample.cpp  krkrgles.cpp  krkrlive2d.cpp  layerExMovie.cpp  layerExPerspective.cpp  saveStruct.cpp  scriptsEx.cpp  textrender.cpp  varfile.cpp  win32_dt.h  win32dialog.cpp  windowEx.cpp  wutcwf.cpp  xp3filter.cpp  xp3filter.h
dockers/: android.Dockerfile
linux/: main.cpp
scripts/: build-linux.sh  build-windows.bat  build-windows.ps1
tests/: CMakeLists.txt
tools/xp3/: CMakeLists.txt  main.cpp
vcpkg/triplets/: arm-android.cmake  arm64-android.cmake  x64-android.cmake  x86-android.cmake
windows/: main.cpp  main.h
(+333 files in other folders)
